# mcp-client-agent

./: Makefile  README.md  pyproject.toml
clients/: example_questions.txt  functions_agent_example.py  mcp_client.py
servers/: mcp_fake_server_config.json
src/: functions_agent.py  mcp_manager.py  utilities.py
tests/: test_functions_agent.py  test_mcp_manager.py
