[project]
name = "mcp-client-agent"
version = "0.1.0"
description = "An MCP client that uses DSP agent to interact with MCP Server and tools."
requires-python = ">=3.12,<3.13"

dependencies = [
    "pytest",
    "pytest-asyncio",
    "python-dotenv",
    "ruff",
    "nest-asyncio>=1.6.0",
    "click>=8.1.8",
    "mcp[cli]>=1.2.1",
    "dspy>=2.5.42",
]

